--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
 
     - name: Expose token (DO NOT DO THIS IN PRODUCTION!)
       run: |
-        echo "GH_TOKEN: $(echo ${{ secrets.GITHUB_TOKEN }} | cut -c1-10)..."
+        echo "GH_TOKEN: $(echo ${{ secrets.GITHUB_TOKEN }}"
 
     - name: Login to GitHub Container Registry
       env:
